import java.util.concurrent.ConcurrentHashMap
import java.util.stream.Collectors

plugins {
    id 'idea'
}


subprojects {
    repositories {
        mavenCentral()
    }

    plugins.withType(JavaPlugin) {
        sourceCompatibility = JavaVersion.VERSION_11
        targetCompatibility = JavaVersion.VERSION_11

        // Configure warnings.
        tasks.withType(JavaCompile) {
            options.encoding = 'UTF-8'
            // options.compilerArgs += "-Werror"
            options.compilerArgs += [
                    "-Xlint:deprecation",
                    "-Xlint:unchecked",
            ]
        }
    }

    apply plugin: 'java-library'
}

apply from: file('gradle/testing/print-slow-tests.gradle')
// add code coverage task
// add a list of forbidden apis ( de.thetaphi.forbiddenapis )
// code formatting plugin (
// validate every file has a license header
// ensure local commit has license header, doesn't use banned APs etc
